Fix center alignment of the card

--- a/src/styles/base/reset.css
+++ b/src/styles/base/reset.css
@@ -18,5 +18,12 @@ html {
 /* Body Reset */
 body {
 	background-color: var(--primary-color);
+}
+
+/* Main Reset */
+main {
+	min-height: 100vh;
+	display: grid;
+	place-items: center;
 	padding: 1.5rem;
 }
